Fix 1.20.4 build